# On-Call-Copilot

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: .gitkeep  chunks.jsonl  faiss.index  index_meta.json
artifacts/eval_reports/: report-1769060612.json  report-1769060627.json
data/: eval_set.jsonl  sample_incidents.jsonl
data/sample_runbooks/: database.md  web-tier.md
eval/: __init__.py  judges.py  metrics.py  offline_eval.py
incident_copilot/: __init__.py
incident_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/docker/: Dockerfile.api  Dockerfile.vllm
infra/helm/: Chart.yaml
infra/helm/templates/: deployment.yaml  service.yaml
rag/: __init__.py  chunking.py  ingest_runbooks.py  retriever.py
scripts/: demo.sh  dev_setup.sh
serving/: __init__.py  api.py  metrics.py  model_client.py  prompts.py  schemas.py
tests/: __init__.py  test_api_mock.py  test_chunking.py  test_promql_tool.py
tools/: __init__.py  promql_tool.py  tool_schemas.py  validators.py
training/: README.md  dpo_unsloth.py  merge_adapters.py  sft_unsloth.py
